[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_test"
version = "0.0.1"
description = "A brief description of your project"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Borjan Sazdov", email = "borjansazdov@yahoo.com" }]
maintainers = [{ name = "Maintainer Name", email = "borjansazdov@yahoo.com" }]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests==2.32.3",
    "httpx==0.28.1",
    "openai==1.63.2",
    "pydantic==2.10.6",
    "instructor==1.7.2",
    "python-dotenv==1.0.1",
    "boto3==1.36.22"
]
optional-dependencies = { dev = ["pytest", "black"] }
urls = { Homepage = "https://emteqlabs.com" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_test"]

[tool.isort]
profile = "black"
